feat(API): Dto-Suffix for all API objects
