# backend/corona-server/src/main/java/de/govhackathon/wvsvcoronatracker/services/impl/PositionsServiceImpl.java
@@ -1,6 +1,6 @@
 package de.govhackathon.wvsvcoronatracker.services.impl;
 
-import de.ghwct.service.model.Position;
+import de.ghwct.service.model.PositionDto;
 import de.govhackathon.wvsvcoronatracker.services.PositionsService;
 import java.time.LocalDateTime;
 import java.util.List;
@@ -10,47 +10,47 @@ import org.springframework.stereotype.Service;
 public class PositionsServiceImpl implements PositionsService {
 
   @Override
-  public List<Position> getPositions() {
+  public List<PositionDto> getPositions() {
     return null;
   }
 
   @Override
-  public List<Position> getPositionsFrom(final LocalDateTime from) {
+  public List<PositionDto> getPositionsFrom(final LocalDateTime from) {
     return null;
   }
 
   @Override
-  public List<Position> getPositionsTo(final LocalDateTime to) {
+  public List<PositionDto> getPositionsTo(final LocalDateTime to) {
     return null;
   }
 
   @Override
-  public List<Position> getPositionsFromTo(final LocalDateTime from, final LocalDateTime to) {
+  public List<PositionDto> getPositionsFromTo(final LocalDateTime from, final LocalDateTime to) {
     return null;
   }
 
   @Override
-  public List<Position> getPositionsTo(final List<Integer> id) {
+  public List<PositionDto> getPositionsTo(final List<Integer> id) {
     return null;
   }
 
   @Override
-  public List<Position> getPositionsByUserId(final Integer userId) {
+  public List<PositionDto> getPositionsByUserId(final Integer userId) {
     return null;
   }
 
   @Override
-  public List<Position> getPositionsByUserIdFrom(final Integer userId, final LocalDateTime from) {
+  public List<PositionDto> getPositionsByUserIdFrom(final Integer userId, final LocalDateTime from) {
     return null;
   }
 
   @Override
-  public List<Position> getPositionsByUserIdTo(final Integer userId, final LocalDateTime to) {
+  public List<PositionDto> getPositionsByUserIdTo(final Integer userId, final LocalDateTime to) {
     return null;
   }
 
   @Override
-  public List<Position> getPositionsByUserIdFromTo(final Integer userId, final LocalDateTime from, final LocalDateTime to) {
+  public List<PositionDto> getPositionsByUserIdFromTo(final Integer userId, final LocalDateTime from, final LocalDateTime to) {
     return null;
   }
 }
